
	general:
		Made the Makefile system more simple. The bbs programs now
		don't run setuid anymore! This makes the system more secure
		but you can't login with Fidonet style names anymore. You
		can't start the bbs from telnet anymore! With a later release
		this may change by adding a login wrapper, for now this is how
		it works now. Take it or leave it.
		Added German language file made by Harald Wuensch.

	SETUP.sh
		Better grep to check for excisting usernames like bbs, mbse.

	libcommon.a:
		When adding seenby entries, the zone number is copied from the
		previous adress just like with the net numbers. This is for
		old style tic files, they were not full 3d.

	lang:
		Changed language prompts 6, 71, 429.
		Added language prompts 472 and 473 for FS editor.
		Added language prompts 474, 475 and 476 for address entry.
		Added language prompts 477 and 478 for post with user alias.
		Deleted language prompts 387, 388, 389, 390

	examples:
		Changed menu setup.mnu and textfiles setup.* to show the new
		setup entries for the users.

	mbsetup:
		Changed usereditor, new layout, added new settings and
		changed password reset function. The system password is
		now also updated.
		Added setup item for menus 317 and 318.
		Changed the order of menu 1, global settings. The screens are
		now in a more logical order for a first system setup.
		Most datafiles are now saved mode 0640 exept the files that
		need to be rewritten by users, they have mode 0660.
		In the file database editor the default choice was 0 in stead
		of -.
		When a file area is made unavailable in menu 8.4, first the
		files in that area area checked. If there are none, the area
		is completly removed, including paths, indexes and database.
		When an new area is made available, the database is created.
		The AREADEF lines in golded.inc now contain the aka to use
		instead of a dot.

	mbsebbs:
		Added menu 317, change FS editor shortcut keys to (Emacs/
		Wordstar) style.