@@ -39,7 +39,7 @@ clean:
 		rm -f mbsetup *.o *.h~ *.c~ core filelist Makefile.bak
 
 install:	all
-		${INSTALL} -s -g ${GROUP} -o ${OWNER} -m ${MODE} mbsetup ${BINDIR}
+		${INSTALL} -c -s -g ${GROUP} -o ${OWNER} -m ${MODE} mbsetup ${BINDIR}
 
 filelist:	Makefile
 		BASE=`pwd`; \
